maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    random3() match {
      0 => if (!estFaceMur()){avance()}
      1 => droite()
      2 => gauche()
    }
      
  }
  prendBiscuit()
}